# django_boiler_plate

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: asgi.py  settings.py  urls.py
