[tool.poetry]
name = "storage-unit"
version = "0.1.0"
description = ""
authors = ["MuhammadHassan1998"]
readme = "README.md"
packages = [{include = "storage_unit"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
black = "^23.1.0"
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
